MAG_graph-35618.log
  File "/var/spool/slurm/d/job35618/slurm_script", line 13
    echo "Running on $(hostname):"
                                 ^
SyntaxError: invalid syntax
